Fix contrast

--- a/app/assets/javascripts/3dbio_viewer/src/webapp/components/molecular-structure/molstar-light.css
+++ b/app/assets/javascripts/3dbio_viewer/src/webapp/components/molecular-structure/molstar-light.css
@@ -2266,7 +2266,7 @@ fieldset[disabled] .msp-plugin .msp-btn-link:focus {
 .msp-plugin .msp-viewport-controls {
     position: absolute;
     right: 1.25em;
-    top: calc(1.25em + 60px);
+    top: calc(1.25em + 108px);
     width: 32px;
 }
 .msp-plugin .msp-viewport-controls-buttons {
